--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -6,7 +6,7 @@
     android:padding="16dp"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".ThirdActivity">
+    tools:context=".ThirdActivityJava">
 
     <EditText
         android:id="@+id/edt_address"
